--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        width: 100%;
+        height: 100vh;
       }
 
       h2 {
-        font-size: 30px;
+        font-size: 40px;
       }
     </style>
   </head>
   <body>
-    <h2>Comming Soon!</h2>
+    <h2>Coming Soon!</h2>
   </body>
 </html>
