--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         padding: 0;
         font-family: sans-serif;
         box-sizing: border-box;
+        font-weight: bold;
       }
 
       body {
